# VFD-Clock

./: CMakeLists.txt  README.md  assets.c  assets.h  bitmap.h  btn.c  display.c  display.h  format.sh  main.c  makefile  platform.h  pomodoro.c  stopwatch.c  ui.c  ui.h
